# Commitlabs-Contracts

./: Cargo.toml  README.md
.github/workflows/: soroban-contracts-ci.yml
contracts/: EMERGENCY.md
contracts/allocation_logic/: Cargo.toml
contracts/allocation_logic/src/: benchmarks.rs  lib.rs  tests.rs
contracts/attestation_engine/src/: benchmarks.rs  lib.rs  tests.rs
contracts/attestation_engine/test_snapshots/tests/: test_attest_event.1.json  test_calculate_compliance_score_event.1.json  test_record_drawdown_event.1.json  test_record_fees_event.1.json
contracts/commitment_core/src/: benchmarks.rs  emergency_tests.rs  lib.rs  tests.rs
contracts/commitment_interface/src/: error.rs
contracts/commitment_marketplace/src/: lib.rs  tests.rs
contracts/commitment_nft/src/: benchmarks.rs  lib.rs  tests.rs
contracts/commitment_transformation/: Cargo.toml
contracts/commitment_transformation/src/: lib.rs  tests.rs
contracts/mock_oracle/: Cargo.toml
contracts/mock_oracle/src/: lib.rs
contracts/price_oracle/src/: lib.rs
contracts/shared_utils/src/: access_control.rs  batch.rs  emergency.rs  error_codes.rs  errors.rs  events.rs  lib.rs  math.rs  rate_limiting.rs  storage.rs  tests.rs  time.rs  validation.rs
contracts/version-system/: Cargo.toml
contracts/version-system/src/: lib.rs
docs/: SECURITY_CONSIDERATIONS.md
tests/integration/: cross_contract_tests.rs  e2e_tests.rs  error_tests.rs  frontend_tests.rs  harness.rs  lib.rs  oracle_tests.rs  token_tests.rs
tests/integration/src/: lib.rs
(+27 files in other folders)
