[workspace]
members = [
    "contracts/commitment_nft",
    "contracts/commitment_core",
    "contracts/attestation_engine",
    "contracts/allocation_logic",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

