[workspace]
members = [
    "contracts/shared_utils",
    "contracts/commitment_nft",
    "contracts/commitment_core",
    "contracts/attestation_engine",
    "contracts/allocation_logic",
    "contracts/commitment_interface",
    "contracts/price_oracle",
    "contracts/mock_oracle",
    "tests/integration"]
# Note: tests/integration is excluded from workspace to prevent testutils feature
# from being enabled during WASM builds. Run integration tests separately.
exclude = [
    "tests/integration",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

